# commutative-monoid-example

./: README.md  commutative-monoid.cabal
executable/: Main.hs
src/: CommutativeMonoid.hs
test/: CommutativeMonoidSpec.hs
